# Semiconductor_Stock_Analysis

./: .buildinfo  README.md  genindex.html  get_stock_data.html  get_stock_data.ipynb  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  requirements.txt  searchindex.js  semiconductor_stock_analysis_2015_2023.html  semiconductor_stock_analysis_2015_2023.ipynb  semiconductor_stock_data.csv
.ipynb_checkpoints/: README-checkpoint.md
_sources/: get_stock_data.ipynb  semiconductor_stock_analysis_2015_2023.ipynb
myfirstbook/: _config.yml  _toc.yml  get_stock_data.ipynb  requirements.txt  semiconductor_stock_analysis_2015_2023.ipynb
myfirstbook/_build/.doctrees/: environment.pickle  get_stock_data.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  semiconductor_stock_analysis_2015_2023.doctree
myfirstbook/_build/html/: .buildinfo  genindex.html  get_stock_data.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js  semiconductor_stock_analysis_2015_2023.html
myfirstbook/_build/jupyter_execute/: get_stock_data.ipynb  markdown-notebooks.ipynb  notebooks.ipynb  semiconductor_stock_analysis_2015_2023.ipynb
