[project]
name = "semiconductor-stock-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "med4kat",email = "31211139+med4kat@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
  
    "matplotlib (>=3.10.3,<4.0.0)",
  
    "yfinance (>=0.2.61,<0.3.0)",
  
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false